# chess-tools

./: .gitignore  LICENSE  README.md  TODO.otl  chess-tools.cabal
src/ChessTools/: Board.hs
src/ChessTools/Board/: Internal.hs  Western.hs
src/ChessTools/Test/: Board.hs  CabalTest.hs  ConsoleTest.hs  Suite.hs  Utils.hs  WesternBoard.hs
test/: Suite.hs  TestBoard.hs
