Name:                chess-tools
Version:             0.1.0
Synopsis:            Library for working with chess (and variants) game data.

Description:
    This library provides some useful data structures for working with chess
    games. It provides the framework onto which can be added a storage or
    analysis system, or a chess playing engine.

    Contained in here are routines for setting up a position and rapidly
    generating all legal moves in that position. This list can be used by other
    code to provide choices to a user, or in some kind of search for the best
    move to play.

    The core code is deliberately generic in order to make it applicable to
    more than just western-style chess. The same data structures should be
    useful for Shogi (Japanese chess) and Xianqi (Chinese chess), as well as
    other variants.

Author:              Malcolm Tredinnick
Maintainer:          Malcolm Tredinnick <malcolm.tredinnick@gmail.com>
Copyright:           Copyright (c) 2011, Malcolm Tredinnick
License:             BSD3
License-file:        LICENSE

Stability:           experimental
Category:            Game
Build-type:          Simple

Homepage:            https://github.com/malcolmt/chess-tools/
Bug-reports:         https://github.com/malcolmt/chess-tools/issues

-- Need to list test source files in extra-source-files until a version of
-- Cabal fixing http://hackage.haskell.org/trac/hackage/ticket/792 is in
-- general use.
Extra-source-files:  README.md
                     TODO.otl
                     src/ChessTools/Test/*.hs

Cabal-version:       >= 1.10

Source-repository head
  Type:              git
  Location:          git://github.com/malcolmt/chess-tools.git


Library
  Exposed-modules:   ChessTools.Board
                     ChessTools.Board.Internal
                     ChessTools.Board.Western

  Default-language:  Haskell2010
  Hs-Source-Dirs:    src
  GHC-Options:       -Wall
  Build-depends:     base < 5.0,
                     array >= 0.3 && < 1.0


Test-Suite test-chess-tools
  Type:              exitcode-stdio-1.0
  Main-is:           ChessTools/Test/CabalTest.hs
  Hs-source-dirs:    src
  Default-language:  Haskell2010

  Build-depends:     base < 5.0,
                     array >= 0.3 && < 1.0,
                     Cabal >= 1.10,
                     test-framework >= 0.4.1 && < 1.0,
                     test-framework-quickcheck2 >= 0.2.10 && < 1.0,
                     QuickCheck >= 2.4.0.1 && < 3.0

  GHC-Options:       -Wall

